# better-git-status

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md  REQUIREMENTS.md
docs/: DESIGN.md  IMPLEMENTATION_V2.md  REQUIREMENTS.md  REQUIREMENTS_V2.md  TEST_IMPROVEMENT.md
src/: app.rs  git.rs  lib.rs  main.rs  types.rs  watcher.rs
src/ui/: colors.rs  diff_panel.rs  file_list.rs  mod.rs  status_bar.rs
tests/: git_integration.rs
