[package]
name = "better-git-status"
version = "0.1.0"
edition = "2021"
description = "Interactive git status with tree view and diff preview"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "6"
notify-debouncer-mini = "0.4"
