[package]
name = "better-git-status"
version = "0.1.0"
edition = "2021"
description = "Interactive git status with tree view and diff preview"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "8"

[dev-dependencies]
tempfile = "3"
